--- a/chat/index.html
+++ b/chat/index.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Calculator" />
+        <meta name="description" content="Broadcaster Chat" />
         <link rel="apple-touch-icon" href="icon192.png" />
         <link rel="manifest" href="manifest.json" />
         <title>Broadcaster</title>
