--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -5,28 +5,23 @@
         <link rel="shortcut icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <title>Old's game</title>
+        <title>Tic-tac-toe</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1>O fabuloso jogo da velha</h1>
+        <h1>Tic-tac-toe</h1>
         <table>
             <tr>
-                <td id="0"></td>
-                <td id="1"></td>
-                <td id="2"></td>
+                <td></td> <td></td> <td></td>
             </tr>
             <tr>
-                <td id="3"></td>
-                <td id="4"></td>
-                <td id="5"></td>
+                <td></td> <td></td> <td></td>
             </tr>
             <tr>
-                <td id="6"></td>
-                <td id="7"></td>
-                <td id="8"></td>
+                <td></td> <td></td> <td></td>
             </tr>
         </table>
+        <h2 id="status"></h2>
     </body>
     <script src="app.js"></script>
 </html>
