--- a/chat/index.html
+++ b/chat/index.html
@@ -57,7 +57,7 @@
         navigator.serviceWorker && navigator.serviceWorker.register('serviceWorker.js');
 
         (function() {
-            var name, url = "http://io.gogs.com.br";
+            var name, url = "https://web-io.herokuapp.com";
 
             input_form.onsubmit = function(e) {
                 e.preventDefault();
