--- a/chat/index.html
+++ b/chat/index.html
@@ -74,7 +74,6 @@
                     var data = new FormData();
                     data.set('message', name + ": " + this.message.value);
                     fetch(url, {method: 'POST', body: data});
-                    chat.innerHTML = chat.innerHTML + "> " + this.message.value + "<br />";
                 }
                 this.reset();
                 chat.scrollTo(0, chat.scrollHeight);
@@ -92,7 +91,12 @@
                             if (!alreadyExist) {
                                 messages.push(item);
                                 localStorage.messages = JSON.stringify(messages);
-                                chat.innerHTML = chat.innerHTML + item.message + "<br />";
+                                if (item.message.startsWith(name + ': ')) { 
+                                    chat.innerHTML = chat.innerHTML + "> " + item.message + "<br />";
+                                }
+                                else {
+                                    chat.innerHTML = chat.innerHTML + item.message + "<br />";
+                                }
                                 chat.scrollTo(0, chat.scrollHeight);
                             }
                         }
