--- a/videogrid/index.html
+++ b/videogrid/index.html
@@ -17,21 +17,73 @@
                 display: flex;
                 flex-wrap: wrap;
                 margin: 0;
+                background: #222;
+                font-family: sans-serif;
             }
             body iframe {
+                z-index: 1;
                 flex: 1;
             }
+            form {
+                position: absolute;
+                left: 50px; right: 50px;
+                text-align: center;
+                color: #FFF;
+            }
+            form input {
+                margin: 15px 0;
+                padding: 25px 0;
+                width: 100%; 
+                font-size: 16px;
+                background: transparent;
+                border: none;
+                border-bottom: 2px solid #FFF;
+                color: #FFF;
+                outline: none;
+            }
+            form button {
+                margin: 25px 0;
+                padding: 25px 0;
+                width: 100%; 
+                font-size: 25px;
+                text-transform: uppercase;
+            }
             #playbutton {
+                z-index: 2;
+                display: none;
                 position: fixed;
-                width: 33%;
-                height: 33%;
-                top: 33%;
-                left: 33%;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                text-shadow: 2px 2px 5px #555;
+                color: #FFF;
+                cursor: pointer;
+                background: #0005;
+                border: none;
+                backdrop-filter: blur(10px);
+            }
+            #playbutton #arrow {
+                width: 0;
+                margin: 0 auto;
+                border-top: 10vh solid transparent;
+                border-bottom: 10vh solid transparent;
+                border-left: 18vh solid #FFF;
             }
         </style>
     </head>
     <body>
-        <button id='playbutton'>Play</button>
+        <form>
+            <br />
+            <h1>Add VIDEO_IDs</h1>
+            <input type='text' name='-' placeholder='https://youtube.com/watch?v=VIDEO_ID' />
+            <input type='text' name='-' placeholder='https://youtube.com/watch?v=VIDEO_ID' />
+            <input type='text' name='-' placeholder='https://youtube.com/watch?v=VIDEO_ID' />
+            <input type='text' name='-' placeholder='https://youtube.com/watch?v=VIDEO_ID' />
+            <button>Submit</button>
+        </form>
+        <button id='playbutton'>
+            <div id='arrow'></div>
+        </button>
     </body>
     <script src='https://www.youtube.com/iframe_api'></script>
     <script>
@@ -39,6 +91,8 @@
 
     playbutton.onclick = function() {
         for (var player of players) {
+            player.unMute();
+            player.seekTo(0);
             player.playVideo();
         }
 
@@ -46,8 +100,7 @@
     };
 
     function onYouTubeIframeAPIReady() {
-        var videosList = location.hash.split('#').slice(1);
-        if (videosList.length == 0) videosList.push('Mi3s-o3LRjg');
+        var videosList = location.search.slice(3).split('&-=').filter(id => id);
 
         for (var videoId of videosList) {
             var id = 'player' + videoId;
@@ -69,12 +122,14 @@
                 },
                 events: {
                     onReady: function(event) {
+                        event.target.mute();
                         event.target.playVideo();
                     }
                 }
             });
 
             players.push(player);
+            playbutton.style.display = 'block';
         }
     }
     </script>
