--- a/videogrid/index.html
+++ b/videogrid/index.html
@@ -25,6 +25,7 @@
                 flex: 1;
             }
             form {
+                display: none;
                 position: absolute;
                 left: 50px; right: 50px;
                 text-align: center;
@@ -72,7 +73,7 @@
         </style>
     </head>
     <body>
-        <form>
+        <form id='form'>
             <br />
             <h1>Add VIDEO_IDs</h1>
             <input type='text' name='-' placeholder='https://youtube.com/watch?v=VIDEO_ID' />
@@ -103,6 +104,7 @@
 
     function onYouTubeIframeAPIReady() {
         var videosList = location.search.slice(3).split('&-=').filter(id => id);
+        if (!videosList.length) form.style.display = 'block';
 
         for (var videoId of videosList) {
             var id = 'player' + videoId;
