--- a/videogrid/index.html
+++ b/videogrid/index.html
@@ -66,7 +66,7 @@
                 min-width: 300px;
                 font-weight: bold;
                 text-shadow: 0 0 3px black;
-                text-align: right;
+                text-align: center;
             }
             iframe {
                 flex: 1;
