--- a/calc/index.html
+++ b/calc/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Calculator" />
         <link rel="apple-touch-icon" href="icon192white.png" />
         <link rel="manifest" href="manifest.json" />
-        <title>Calculator</title>
+        <title>RPN Calc</title>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
             body {
