Fix sto function

--- a/calc/index.html
+++ b/calc/index.html
@@ -175,7 +175,7 @@
             }
 
             function sto() {
-                action = null;
+                action = ROLL;
                 reg = x;
                 show();
             }
