One more behavior incremented in RCL function

--- a/calc/index.html
+++ b/calc/index.html
@@ -184,7 +184,7 @@
             }
 
             function rcl() {
-                if (action == ROLL) {
+                if (action == ROLL || action == INSERT) {
                     t = z;
                     z = y;
                     y = x;
